--- a/source/form.html
+++ b/source/form.html
@@ -11,12 +11,14 @@
 
   <header class="header">
 
-    <div class="header__wrapper container">
-      <a href="index.html" class="header__logo">
-        <img class="header__logo-image" src="img/logo-mobile.svg" width="191" height="39" alt="Логотип cat energy">
-      </a>
+    <div class="header__wrapper">
+      <div class="header__inner">
+        <a href="index.html" class="header__logo">
+          <img class="header__logo-image" src="img/logo-mobile.svg" width="191" height="39" alt="Логотип cat energy">
+        </a>
+        <button type="button" class="header__toggle" aria-label="Открывает/закрывает главное меню"></button>
+      </div>
       <nav class="header__nav main-nav">
-        <button type="button" class="main-nav__toggle" aria-label="Открывает/закрывает главное меню"></button>
         <ul class="main-nav__list site-list">
           <li class="site-list__item">
             <a href="index.html" class="site-list__link">Главная</a>
