fix lists selectors

--- a/source/index.html
+++ b/source/index.html
@@ -40,8 +40,7 @@
 
     <section class="banner">
 
-      <div class="banner__wrapper">
-        <div class="banner__inner container">
+        <div class="banner__wrapper container">
           <h1 class="banner__title">Функциональное питание для котов</h1>
           <div class="banner__slogan">Занялся собой? Займись котом!</div>
           <div class="banner__content-wrapper">
@@ -50,7 +49,6 @@
             <a href="form.html" class="banner__btn main-btn">Подобрать программу</a>
           </div>
         </div>
-      </div>
 
     </section>
 
