--- a/source/catalog.html
+++ b/source/catalog.html
@@ -267,78 +267,80 @@
 
     </section>
 
-    <section class="аdditional-catalog">
+    <div class="container">
 
-      <div class="cаdditional__wrapper container">
-        <h2 class="аdditional-catalog__title">Дополнительные товары</h2>
-        <ul class="аdditional-catalog__list аdditional-list">
-          <li class="аdditional-list__item">
-            <article class="аdditional-list__item-content аdditional-product">
-              <h3 class="аdditional-product__title">Сахарозаменитель</h3>
-              <table class="аdditional-product__cost cost main-text">
-                <tr>
-                  <td class="cost__name">1 упаковка (100 г)</td>
-                  <td class="cost__price">200 Р.</td>
-                </tr>
-              </table>
-              <a href="#" class="аdditional-product__btn main-btn">Заказать</a>
-            </article>
-          </li>
-          <li class="аdditional-list__item">
-            <article class="аdditional-list__item-content аdditional-product">
-              <h3 class="аdditional-product__title">Питьевая вода</h3>
-              <table class="аdditional-product__cost cost main-text">
-                <tr>
-                  <td class="cost__name">5 литров</td>
-                  <td class="cost__price">50 Р.</td>
-                </tr>
-              </table>
-              <a href="#" class="аdditional-product__btn main-btn">Заказать</a>
-            </article>
-          </li>
-          <li class="аdditional-list__item">
-            <article class="аdditional-list__item-content аdditional-product">
-              <h3 class="аdditional-product__title">Молоко</h3>
-              <table class="аdditional-product__cost cost  main-text">
-                <tr>
-                  <td class="cost__name">1 литр</td>
-                  <td class="cost__price">100 Р.</td>
-                </tr>
-              </table>
-              <a href="#" class="аdditional-product__btn main-btn">Заказать</a>
-            </article>
-          </li>
-          <li class="аdditional-list__item">
-            <article class="аdditional-list__item-content аdditional-product">
-              <h3 class="аdditional-product__title">Витамины</h3>
-              <table class="аdditional-product__cost cost main-text">
-                <tr>
-                  <td class="cost__name">1 упаковка (30 г)</td>
-                  <td class="cost__price">300 Р.</td>
-                </tr>
-              </table>
-              <a href="#" class="аdditional-product__btn main-btn">Заказать</a>
-            </article>
-          </li>
-        </ul>
-      </div>
+      <section class="аdditional-catalog">
 
-    </section>
-
-    <section class="special">
-
-      <div class="special__wrapper container">
-        <div class="special__inner">
-          <h2 class="visually-hidden">Акция</h2>
-          <img class="special__ico" src="img/gift-ico.svg" width="56" height="61" alt="Подарок">
-          <p class="special__text">
-            Закажите все
-            и&nbsp;получите чехол для кота в подарок!
-          </p>
+        <div class="cаdditional__wrapper">
+          <h2 class="аdditional-catalog__title">Дополнительные товары</h2>
+          <ul class="аdditional-catalog__list аdditional-list">
+            <li class="аdditional-list__item">
+              <article class="аdditional-list__item-content аdditional-product">
+                <h3 class="аdditional-product__title">Сахарозаменитель</h3>
+                <table class="аdditional-product__cost cost main-text">
+                  <tr>
+                    <td class="cost__name">1 упаковка (100 г)</td>
+                    <td class="cost__price">200 Р.</td>
+                  </tr>
+                </table>
+                <a href="#" class="аdditional-product__btn main-btn">Заказать</a>
+              </article>
+            </li>
+            <li class="аdditional-list__item">
+              <article class="аdditional-list__item-content аdditional-product">
+                <h3 class="аdditional-product__title">Питьевая вода</h3>
+                <table class="аdditional-product__cost cost main-text">
+                  <tr>
+                    <td class="cost__name">5 литров</td>
+                    <td class="cost__price">50 Р.</td>
+                  </tr>
+                </table>
+                <a href="#" class="аdditional-product__btn main-btn">Заказать</a>
+              </article>
+            </li>
+            <li class="аdditional-list__item">
+              <article class="аdditional-list__item-content аdditional-product">
+                <h3 class="аdditional-product__title">Молоко</h3>
+                <table class="аdditional-product__cost cost  main-text">
+                  <tr>
+                    <td class="cost__name">1 литр</td>
+                    <td class="cost__price">100 Р.</td>
+                  </tr>
+                </table>
+                <a href="#" class="аdditional-product__btn main-btn">Заказать</a>
+              </article>
+            </li>
+            <li class="аdditional-list__item">
+              <article class="аdditional-list__item-content аdditional-product">
+                <h3 class="аdditional-product__title">Витамины</h3>
+                <table class="аdditional-product__cost cost main-text">
+                  <tr>
+                    <td class="cost__name">1 упаковка (30 г)</td>
+                    <td class="cost__price">300 Р.</td>
+                  </tr>
+                </table>
+                <a href="#" class="аdditional-product__btn main-btn">Заказать</a>
+              </article>
+            </li>
+          </ul>
         </div>
-      </div>
 
-    </section>
+      </section>
+
+      <section class="special">
+
+          <div class="special__wrappe">
+            <h2 class="visually-hidden">Акция</h2>
+            <img class="special__ico" src="img/gift-ico.svg" width="56" height="61" alt="Подарок">
+            <p class="special__text">
+              Закажите все
+              и&nbsp;получите чехол для кота в подарок!
+            </p>
+          </div>
+
+      </section>
+
+    </div>
 
   </main>
 
