delete class banner__wrapper

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -329,7 +329,7 @@
 
       <section class="special">
 
-          <div class="special__wrappe">
+          <div class="special__wrapper">
             <h2 class="visually-hidden">Акция</h2>
             <img class="special__ico" src="img/gift-ico.svg" width="56" height="61" alt="Подарок">
             <p class="special__text">
