--- a/source/index.html
+++ b/source/index.html
@@ -40,7 +40,7 @@
 
     <section class="banner">
 
-        <div class="banner__wrapper container">
+        <div class="container">
           <h1 class="banner__title">Функциональное питание для котов</h1>
           <div class="banner__slogan">Занялся собой? Займись котом!</div>
           <div class="banner__content-wrapper">
