start grid build part-2

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -267,58 +267,66 @@
 
     </section>
 
-    <div class="container">
+    <div class="section-wrapper container">
 
       <section class="аdditional-catalog">
 
-        <div class="cаdditional__wrapper">
+        <div class="аdditional-catalog__wrapper">
           <h2 class="аdditional-catalog__title">Дополнительные товары</h2>
           <ul class="аdditional-catalog__list аdditional-list">
             <li class="аdditional-list__item">
               <article class="аdditional-list__item-content аdditional-product">
-                <h3 class="аdditional-product__title">Сахарозаменитель</h3>
-                <table class="аdditional-product__cost cost main-text">
-                  <tr>
-                    <td class="cost__name">1 упаковка (100 г)</td>
-                    <td class="cost__price">200 Р.</td>
-                  </tr>
-                </table>
+                <div class="additional-product__info-wrapper">
+                  <h3 class="аdditional-product__title">Сахарозаменитель</h3>
+                  <table class="аdditional-product__cost cost main-text">
+                    <tr class="cost__wrapper">
+                      <td class="cost__name">1 упаковка (100 г)</td>
+                      <td class="cost__price">200 Р.</td>
+                    </tr>
+                  </table>
+                </div>
                 <a href="#" class="аdditional-product__btn main-btn">Заказать</a>
               </article>
             </li>
             <li class="аdditional-list__item">
               <article class="аdditional-list__item-content аdditional-product">
-                <h3 class="аdditional-product__title">Питьевая вода</h3>
-                <table class="аdditional-product__cost cost main-text">
-                  <tr>
-                    <td class="cost__name">5 литров</td>
-                    <td class="cost__price">50 Р.</td>
-                  </tr>
-                </table>
+                <div class="additional-product__info-wrapper">
+                  <h3 class="аdditional-product__title">Питьевая вода</h3>
+                  <table class="аdditional-product__cost cost main-text">
+                    <tr class="cost__wrapper">
+                      <td class="cost__name">5 литров</td>
+                      <td class="cost__price">50 Р.</td>
+                    </tr>
+                  </table>
+                </div>
                 <a href="#" class="аdditional-product__btn main-btn">Заказать</a>
               </article>
             </li>
             <li class="аdditional-list__item">
               <article class="аdditional-list__item-content аdditional-product">
-                <h3 class="аdditional-product__title">Молоко</h3>
-                <table class="аdditional-product__cost cost  main-text">
-                  <tr>
-                    <td class="cost__name">1 литр</td>
-                    <td class="cost__price">100 Р.</td>
-                  </tr>
-                </table>
+                <div class="additional-product__info-wrapper">
+                  <h3 class="аdditional-product__title">Молоко</h3>
+                  <table class="аdditional-product__cost cost  main-text">
+                    <tr class="cost__wrapper">
+                      <td class="cost__name">1 литр</td>
+                      <td class="cost__price">100 Р.</td>
+                    </tr>
+                  </table>
+                </div>
                 <a href="#" class="аdditional-product__btn main-btn">Заказать</a>
               </article>
             </li>
             <li class="аdditional-list__item">
               <article class="аdditional-list__item-content аdditional-product">
-                <h3 class="аdditional-product__title">Витамины</h3>
-                <table class="аdditional-product__cost cost main-text">
-                  <tr>
-                    <td class="cost__name">1 упаковка (30 г)</td>
-                    <td class="cost__price">300 Р.</td>
-                  </tr>
-                </table>
+                <div class="additional-product__info-wrapper">
+                  <h3 class="аdditional-product__title">Витамины</h3>
+                  <table class="аdditional-product__cost cost main-text">
+                    <tr class="cost__wrapper">
+                      <td class="cost__name">1 упаковка (30 г)</td>
+                      <td class="cost__price">300 Р.</td>
+                    </tr>
+                  </table>
+                </div>
                 <a href="#" class="аdditional-product__btn main-btn">Заказать</a>
               </article>
             </li>
@@ -329,14 +337,14 @@
 
       <section class="special">
 
-          <div class="special__wrapper">
-            <h2 class="visually-hidden">Акция</h2>
-            <img class="special__ico" src="img/gift-ico.svg" width="56" height="61" alt="Подарок">
-            <p class="special__text">
-              Закажите все
-              и&nbsp;получите чехол для кота в подарок!
-            </p>
-          </div>
+        <div class="special__wrapper">
+          <h2 class="visually-hidden">Акция</h2>
+          <img class="special__ico" src="img/icon-gift.svg" width="56" height="61" alt="Подарок">
+          <p class="special__text">
+            Закажите все
+            и&nbsp;получите чехол для кота в подарок!
+          </p>
+        </div>
 
       </section>
 
@@ -351,10 +359,10 @@
       <div class="contacts__wrapper container">
         <div class="contacts__text-wrapper">
           <p class="contacts__text">
-            приглашаем к сотрудничеству дилеров!
+            приглашаем к&nbsp;сотрудничеству дилеров!
           </p>
           <p class="contacts__address main-text">
-            ул. Большая Конюшенная, д. 19/8 Санкт-Петербург
+            ул. Большая Конюшенная, д. 19/8 <span class="contacts__address-city">Санкт-Петербург</span>
           </p>
         </div>
       </div>
