--- a/source/index.html
+++ b/source/index.html
@@ -40,15 +40,15 @@
 
     <section class="banner">
 
-        <div class="container">
-          <h1 class="banner__title">Функциональное питание для котов</h1>
-          <div class="banner__slogan">Занялся собой? Займись котом!</div>
-          <div class="banner__content-wrapper">
-            <img class="banner__feed-image" src="img/index-can-mobile@1x.png" width="280" height="270"
-              alt="Корм cat energy со вкусом курицаы, оранжевого цвета">
-            <a href="form.html" class="banner__btn main-btn">Подобрать программу</a>
-          </div>
+      <div class="container">
+        <h1 class="banner__title">Функциональное питание для котов</h1>
+        <div class="banner__slogan">Занялся собой? Займись котом!</div>
+        <div class="banner__content-wrapper">
+          <img class="banner__feed-image" src="img/index-can-mobile@1x.png" width="280" height="270"
+            alt="Корм cat energy со вкусом курицаы, оранжевого цвета">
+          <a href="form.html" class="banner__btn main-btn">Подобрать программу</a>
         </div>
+      </div>
 
     </section>
 
@@ -110,51 +110,59 @@
 
     <section class="result">
 
-      <div class="result__wrapper container">
+      <div class="result__wrapper">
         <h2 class="result__title main-title">Живой пример</h2>
-        <p class="result__text main-text main-text">
-          Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный
-          результат без
-          изнуряющих
-          тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
-        </p>
-        <ul class="result__counter-list">
-          <li class="result__counter-item">
-            <p class="result__counter">
-              5 кг
-            </p>
-            <p class="result__border-text main-text">
-              снижение веса
-            </p>
-          </li>
-          <li class="result__counter-item">
-            <p class="result__counter">
-              60 дней
-            </p>
-            <p class="result__border-text main-text">
-              затрачено времени
-            </p>
-          </li>
-        </ul>
-        <p class="result__cost">
-          Затраты на питание: 15 000 руб.
-        </p>
-        <div class="result__image-wrapper">
-          <img class="result__image result__image--after" src="img/result-cat--afte.png" alt="Кот до - полный"
-            width="311" height="232">
-          <img class="result__image result__image--middle" src="img/result-cat--middle.png"
-            alt="Кот, левая часть до - полный кот, правая часть после - стройный кот" width="311" height="232">
-          <img class="result__image result__image--before" src="img/result-cat--before.png" alt="Кот после - стройный"
-            width="311" height="232">
-        </div>
-        <div class="result__range-wrapper">
-          <button type="button" class="result__btn">
-            Было
-          </button>
-          <div class="result__range-bar"></div>
-          <button type="button" class="result__btn">
-            Стало
-          </button>
+        <div class="result__content">
+          <div class="result__content-wrapper">
+            <div class="result__text-wrapper">
+              <p class="result__text main-text main-text">
+                Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный
+                результат без
+                изнуряющих
+                тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
+              </p>
+              <ul class="result__counter-list">
+                <li class="result__counter-item">
+                  <p class="result__counter">
+                    5 кг
+                  </p>
+                  <p class="result__border-text main-text">
+                    снижение веса
+                  </p>
+                </li>
+                <li class="result__counter-item">
+                  <p class="result__counter">
+                    60 дней
+                  </p>
+                  <p class="result__border-text main-text">
+                    затрачено времени
+                  </p>
+                </li>
+              </ul>
+              <p class="result__cost">
+                Затраты на питание: <span class="result__total-sum">15 000 руб.</span>
+              </p>
+            </div>
+            <div class="result__cat-wrapper">
+              <div class="result__cat-inner">
+                <div class="result__image-wrapper">
+                  <img class="result__image result__image--before result__image--active" src="img/before-mobile@1x.png"
+                    alt="Кот до - полный" width="311" height="232">
+                  <img class="result__image result__image--after" src="img/after-mobile@1x.png"
+                    alt="Кот после - стройный" width="311" height="232">
+                </div>
+                <div class="result__range-wrapper">
+                  <button type="button" class="result__btn">
+                    Было
+                  </button>
+                  <div class="result__range-bar"></div>
+                  <button type="button" class="result__btn">
+                    Стало
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
 
@@ -169,7 +177,7 @@
       <div class="contacts__wrapper container">
         <div class="contacts__text-wrapper">
           <p class="contacts__text">
-            приглашаем к сотрудничеству дилеров!
+            приглашаем к&nbsp;сотрудничеству дилеров!
           </p>
           <p class="contacts__address main-text">
             ул. Большая Конюшенная, д. 19/8 <span class="contacts__address-city">Санкт-Петербург</span>
